Resource.json/NetworkPolicy_Y24tZGV2LWFrcy1jbi0xK2FyZ29jZC1hcHBsaWNhdGlvbi1jb250cm9sbGVyLW5ldHdvcmstcG9saWN5K2FyZ29jZA==.yaml
ApiVersion: networking.k8s.io/v1
Kind: NetworkPolicy
Metadata: '{''annotations'': {''kubectl.kubernetes.io/last-applied-configuration'':
  ''{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":null,"name":"argocd-application-controller-network-policy","namespace":"argocd"},"spec":{"ingress":[{"from":[{"namespaceSelector":null}],"ports":[{"port":8082}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"argocd-application-controller"}},"policyTypes":["Ingress"]}}\n''},
  ''creationTimestamp'': ''2023-11-22T06:06:22Z'', ''generation'': 1, ''name'': ''argocd-application-controller-network-policy'',
  ''namespace'': ''argocd'', ''resourceVersion'': ''176619926'', ''uid'': ''1c68c4f2-1129-4f77-a4f8-1dd1a67b31aa''}'
Name: argocd-application-controller-network-policy
Spec:
  ingress:
  - from:
    - namespaceSelector: null
    ports:
    - port: 8082
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
kind: NetworkPolicy
